--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-responsive-masonry": "^2.1.4",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
